
    MAPREDUCE-4278. cannot run two local jobs in parallel from the same 
    gateway. (Sandy Ryza via tgraves)

    MAPREDUCE-4458. Warn if java.library.path is used for AM or Task
    (Robert Parker via jeagles)

    MAPREDUCE-3952. In MR2, when Total input paths to process == 1,
    CombinefileInputFormat.getSplits() returns 0 split. (Bhallamudi 
    Venkata Siva Kamesh via tgraves)

Release 0.23.6 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    MAPREDUCE-4811. JobHistoryServer should show when it was started in WebUI
    About page (Ravi Prakash via jlowe)

    MAPREDUCE-4845. ClusterStatus.getMaxMemory() and getUsedMemory() exist in 
    MR1 but not MR2 (Sandy Ryza via tgraves)

    MAPREDUCE-4899. Implemented a MR specific plugin for tracking finished
    applications that YARN's ResourceManager doesn't keep track off anymore
    (Derek Dagit via vinodkv)

    MAPREDUCE-4894. Renewal / cancellation of JobHistory tokens (Siddharth
    Seth via tgraves)

    MAPREDUCE-4810. Added new admin command options for MR AM. (Jerry Chen via
    tgraves)

  OPTIMIZATIONS

  BUG FIXES

    MAPREDUCE-4764. repair TestBinaryTokenFile (Ivan A. Veselovsky via bobby)

    MAPREDUCE-4825. JobImpl.finished doesn't expect ERROR as a final job state
    (jlowe via bobby)

    MAPREDUCE-4817. Hardcoded task ping timeout kills tasks localizing large 
    amounts of data (tgraves)

    MAPREDUCE-4836. Elapsed time for running tasks on AM web UI tasks page is 0
    (Ravi Prakash via jeagles)

    MAPREDUCE-4895. Fix compilation failure of org.apache.hadoop.mapred.
    gridmix.TestResourceUsageEmulators (Dennis Y via tgraves)

    MAPREDUCE-4861. Cleanup: Remove unused mapreduce.security.token.
    DelegationTokenRenewal  (Karthik Kambatla via tgraves)

    MAPREDUCE-4856. TestJobOutputCommitter uses same directory as TestJobCleanup 
    (Sandy Ryza via tgraves)

    MAPREDUCE-4842. Shuffle race can hang reducer (Mariappan Asokan via jlowe)
