@@ -31,6 +31,9 @@ Release 0.23.7 - UNRELEASED
     CombinefileInputFormat.getSplits() returns 0 split. (Bhallamudi 
     Venkata Siva Kamesh via tgraves)
 
+    MAPREDUCE-4470. Fix TestCombineFileInputFormat.testForEmptyFile (ikatsov 
+    via tgraves)
+
 Release 0.23.6 - UNRELEASED
 
   INCOMPATIBLE CHANGES
